Adding check for new major version and a changelog entry

--- a/src/Storefront/Resources/views/storefront/component/pagination.html.twig
+++ b/src/Storefront/Resources/views/storefront/component/pagination.html.twig
@@ -3,7 +3,7 @@
     {% set totalPages = (entities.total / criteria.limit)|round(0, 'ceil') %}
 
     {% set paginationSuffix = '' %}
-    {% if paginationLocation %}
+    {% if feature('v6_5_0_0') and paginationLocation %}
         {% set paginationSuffix = '-' ~ paginationLocation %}
     {% endif %}
 
