NEXT-19855 - Add AppLifecycle hooks

--- a/src/Docs/Resources/templates/Scripts/hook-reference.md.twig
+++ b/src/Docs/Resources/templates/Scripts/hook-reference.md.twig
@@ -4,7 +4,7 @@
 {% for useCase in data %}
 ## {{ useCase.title }}
 
-{{ useCase.description }}
+{{ useCase.description|raw }}
 
 {% for hook in useCase.hooks %}
 #### {{ hook.name }}
