--- a/src/Administration/Resources/app/administration/src/module/sw-sales-channel/product-export-templates/google-product-search-de/body.xml.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-sales-channel/product-export-templates/google-product-search-de/body.xml.twig
@@ -5,7 +5,7 @@
     <g:google_product_category>950{# change your Google Shopping category #}</g:google_product_category>
     <g:product_type>{{ product.categories.first.getBreadCrumb|slice(1)|join(' > ')|raw|escape }}</g:product_type>
     <link>{{ seoUrl('frontend.detail.page', {'productId': product.id}) }}</link>
-    <g:image_link>{{ product.cover.media.url }}</g:image_link>
+    {% if product.cover.media is defined %}<g:image_link>{{ product.cover.media.url }}</g:image_link>{% endif %}
     <g:condition>new</g:condition>
     <g:availability>
         {%- if product.availableStock >= product.minPurchase and product.deliveryTime -%}
