NEXT-11979 - Global anchor styling

--- a/src/Administration/Resources/app/administration/src/app/assets/scss/global.scss
+++ b/src/Administration/Resources/app/administration/src/app/assets/scss/global.scss
@@ -28,9 +28,12 @@ body,
     z-index: $z-index-drag-select-box;
 }
 
+a,
 .link {
     display: inline-block;
     color: $color-shopware-brand-500;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 /* style inline external links */
