--- a/src/Administration/Resources/app/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
@@ -197,7 +197,7 @@
                                         {% block sw_cms_list_listing_list_item_option_delete %}
                                         <sw-context-menu-item
                                             v-if="!cmsPage.locked"
-                                            v-tooltip="deleteDisabledToolTip(cmsPage)"
+                                            v-tooltip="canDeletePage(cmsPage)"
                                             class="sw-cms-list-item__option-delete"
                                             variant="danger"
                                             :disabled="optionContextDeleteDisabled(cmsPage)"
@@ -285,7 +285,7 @@
 
                                 {% block sw_cms_list_listing_list_data_grid_column_assignments %}
                                 <template #column-assignments="{ item }">
-                                    {{ item.categories.length + item.products.length }}
+                                    {{ linkedCategoryCountMap[item.id] + linkedProductCountMap[item.id] }}
                                 </template>
                                 {% endblock %}
 
@@ -329,11 +329,7 @@
                                         v-tooltip="deleteDisabledToolTip(item)"
                                         variant="danger"
                                         class="sw-cms-list__context-menu-item-delete"
-                                        :disabled="
-                                            item.categories.length > 0 ||
-                                                (item.products && item.products.length > 0) ||
-                                                !acl.can('cms.deleter')
-                                        "
+                                        :disabled="canDeletePage(item)"
                                         @click="onDeleteCmsPage(item)"
                                     >
                                         {{ $tc('sw-cms.components.cmsListItem.delete') }}
