--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.html.twig
@@ -9,42 +9,47 @@
         class="sw-card"
         :class="cardClasses()"
     >
-        {% block sw_card_title %}
-        <slot name="title">
-            <div
-                v-if="title"
-                class="sw-card__title"
-            >
-                {{ title }}
-            </div>
-        </slot>
-        {% endblock %}
-
-        {% block sw_card_subtitle %}
-        <slot name="subtitle">
-            <div
-                v-if="subtitle"
-                class="sw-card__subtitle"
-            >
-                {{ subtitle }}
-            </div>
-        </slot>
-        {% endblock %}
-
-        <slot name="tabs"></slot>
-
-        {% block sw_card_toolbar %}
         <div
-            v-if="!!$slots.toolbar"
-            class="sw-card__toolbar"
+            v-if="showHeader"
+            class="sw-card__header"
         >
-            {% block sw_card_toolbar_inner %}
-            <slot name="toolbar">
-            {% block sw_card_slot_toolbar %}{% endblock %}
+            {% block sw_card_title %}
+            <slot name="title">
+                <div
+                    v-if="title"
+                    class="sw-card__title"
+                >
+                    {{ title }}
+                </div>
             </slot>
-        {% endblock %}
+            {% endblock %}
+
+            {% block sw_card_subtitle %}
+            <slot name="subtitle">
+                <div
+                    v-if="subtitle"
+                    class="sw-card__subtitle"
+                >
+                    {{ subtitle }}
+                </div>
+            </slot>
+            {% endblock %}
+
+            <slot name="tabs"></slot>
+
+            {% block sw_card_toolbar %}
+            <div
+                v-if="!!$slots.toolbar"
+                class="sw-card__toolbar"
+            >
+                {% block sw_card_toolbar_inner %}
+                <slot name="toolbar">
+                    {% block sw_card_slot_toolbar %}{% endblock %}
+                </slot>
+                {% endblock %}
+            </div>
+            {% endblock %}
         </div>
-        {% endblock %}
 
         {% block sw_card_content %}
         <div class="sw-card__content">
