NEXT-18115 - adjust the width of 800px content to 960px content

--- a/src/Administration/Resources/app/administration/src/app/assets/scss/variables.scss
+++ b/src/Administration/Resources/app/administration/src/app/assets/scss/variables.scss
@@ -10,6 +10,7 @@
  * 6. Typography
  * 7. Miscellaneous
  * 8. z-index
+ * 9. Global widths
  * ------------------------------------ */
 
 /* ------------------------------------
@@ -254,3 +255,8 @@ $z-index-tooltip: 1100;
 $z-index-notifications: 1200;
 $z-index-hover-image: 1300;
 $z-index-dragdrop: 1400;
+
+/* ------------------------------------
+ * 8. Global widths
+ * ------------------------------------ */
+$content-width: 960px;
