--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-page/sw-page.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-page/sw-page.scss
@@ -25,7 +25,7 @@ $sw-page-search-bar-z-index: $z-index-sw-page-search-bar;
         position: relative;
         display: grid;
         grid-column-gap: 8px;
-        grid-template-columns: [head-start back-btn-start] 1fr [back-btn-end header-content-start] minmax(0, 800px) [header-content-end] 1fr [smart-bar-end];
+        grid-template-columns: [head-start back-btn-start] 1fr [back-btn-end header-content-start] minmax(0, $content-width) [header-content-end] 1fr [smart-bar-end];
         align-items: center;
         background: $sw-page-smart-bar-background-color;
         border-bottom: 2px solid $sw-page-smart-bar-border-color;
@@ -80,7 +80,7 @@ $sw-page-search-bar-z-index: $z-index-sw-page-search-bar;
 
     .smart-bar__content {
         min-height: 70px;
-        max-width: 800px;
+        max-width: $content-width;
         padding: 15px 0;
         display: flex;
         justify-content: space-between;
