--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.html.twig
@@ -13,27 +13,37 @@
             v-if="showHeader"
             class="sw-card__header"
         >
-            {% block sw_card_title %}
-            <slot name="title">
-                <div
-                    v-if="title"
-                    class="sw-card__title"
-                >
-                    {{ title }}
-                </div>
-            </slot>
-            {% endblock %}
+            <div
+                v-if="hasAvatar"
+                class="sw-card__avatar"
+            >
+                <slot name="avatar">
+                </slot>
+            </div>
 
-            {% block sw_card_subtitle %}
-            <slot name="subtitle">
-                <div
-                    v-if="subtitle"
-                    class="sw-card__subtitle"
-                >
-                    {{ subtitle }}
-                </div>
-            </slot>
+            <div class="sw-card__titles">
+                {% block sw_card_title %}
+                <slot name="title">
+                    <div
+                        v-if="title"
+                        class="sw-card__title"
+                    >
+                        {{ title }}
+                    </div>
+                </slot>
+                {% endblock %}
+
+                {% block sw_card_subtitle %}
+                <slot name="subtitle">
+                    <div
+                        v-if="subtitle"
+                        class="sw-card__subtitle"
+                    >
+                        {{ subtitle }}
+                    </div>
+                </slot>
             {% endblock %}
+            </div>
 
             <slot name="tabs"></slot>
 
