--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.scss
@@ -2,10 +2,11 @@
 @import "~scss/variables";
 
 .sw-card {
-    max-width: 800px;
+    max-width: $content-width;
     margin: 0 auto 40px auto;
     position: relative;
     color: $color-darkgray-200;
+
     @include drop-shadow-default();
 
     &__context-menu {
@@ -51,10 +52,27 @@
     }
 
     .sw-card__header {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 12px;
         background-color: $color-white;
         padding: 24px;
+        padding-bottom: 20px;
         border-radius: $border-radius-lg $border-radius-lg 0 0;
         border-bottom: 1px solid $color-gray-300;
+    }
+
+    .sw-card__avatar {
+        overflow: hidden;
+        border-radius: $border-radius-default;
+        width: 40px;
+        height: 40px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
     }
 
     .sw-card__title,
@@ -63,22 +81,30 @@
     }
 
     .sw-card__title {
-        color: $color-darkgray-800;
+        color: $color-darkgray-300;
         font-size: $font-size-large;
         font-weight: $font-weight-semi-bold;
-        line-height: 24px;
+        line-height: 18px;
     }
 
     .sw-card__subtitle {
         color: $color-darkgray-50;
         font-size: $font-size-small;
-        line-height: 20px;
+        line-height: 18px;
     }
 
     .sw-card__toolbar {
+        flex-basis: 100%;
         padding: 30px;
         background-color: $color-gray-100;
         border: 1px solid $color-gray-300;
+    }
+
+    &.has--subtitle,
+    &.has--title {
+        .sw-card__toolbar {
+            margin-top: 12px;
+        }
     }
 
     &.has--header {
@@ -89,13 +115,14 @@
     }
 
     .sw-card__content {
+        display: flow-root;
         padding: 30px;
         background: $color-white;
         background-clip: padding-box;
         border-radius: $border-radius-lg;
         position: relative;
 
-        @media screen and (max-width: 800px) {
+        @media screen and (max-width: $content-width) {
             padding: 15px;
         }
 
