--- a/src/Core/Profiling/Resources/views/Collector/script_traces.html.twig
+++ b/src/Core/Profiling/Resources/views/Collector/script_traces.html.twig
@@ -6,6 +6,8 @@
         <span class="sf-toolbar-value">{{ collector.scriptCount }} in {{ collector.took }} ms</span>
     {% endset %}
 
+    {% set status = collector.deprecationCount > 0 ? 'yellow' %}
+
     {% set text %}
         <div class="sf-toolbar-info-piece">
             <b>Hooks</b>
@@ -22,6 +24,13 @@
             <b>Script time</b>
             <span>{{ collector.took }}</span>
         </div>
+
+        {% if collector.deprecationCount > 0 %}
+            <div class="sf-toolbar-info-piece">
+                <b>Deprecations</b>
+                <span class="sf-toolbar-status sf-toolbar-status-yellow">{{ collector.deprecationCount }}</span>
+            </div>
+        {% endif %}
     {% endset %}
 
     {{ include('@WebProfiler/Profiler/toolbar_item.html.twig', { link: true }) }}
@@ -44,10 +53,35 @@
         <div class="sf-tabs" data-proccessed="true">
             {% for hook, scripts in collector.data %}
                 <div class="tab">
-                    <h3 class="tab-title">{{ hook }} <span class="badge">{{ scripts|length }}</span></h3>
+                    {% set deprecationCount = scripts|reduce((count, script) => count + script.deprecations|length) %}
+                    <h3 class="tab-title">{{ hook }} <span class="badge {{ deprecationCount > 0 ? 'status-warning' }}">{{ scripts|length }}</span></h3>
 
                     <div class="tab-content">
+                        {% if deprecationCount > 0 %}
+                            <h2>Deprecations</h2>
+                            <table class="deprecations" data-filters>
+                                <thead>
+                                <tr>
+                                    <th>Script</th>
+                                    <th>Count</th>
+                                    <th class="full-width">Deprecation Message</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for script in scripts %}
+                                    {% for deprecation, count in script.deprecations %}
+                                        <tr class="log-status-warning">
+                                            <td class="font-normal text-small text-bold nowrap">{{ script.name }}</td>
+                                            <td class="text-normal nowrap">{{ count }}</td>
+                                            <td>{{ deprecation }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        {% endif %}
                         {% if scripts|length > 0 %}
+                            <h2>Debug</h2>
                             <table class="scripts" data-filters>
                                 <thead>
                                     <tr>
