NEXT-20075 - Fix clickability of elements, when error occured

--- a/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-block/sw-cms-block.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-block/sw-cms-block.scss
@@ -59,6 +59,6 @@ $sw-cms-block-color-warning: $color-pumpkin-spice-500;
 
     &.has--error > .sw-cms-block__config-overlay,
     &.has--warning > .sw-cms-block__config-overlay {
-        display: none;
+        border: none;
     }
 }
