NEXT-12411 - Implemented advanced selection functionality to allow the selection of multiple products at once in the rule builder

--- a/src/Administration/Resources/app/administration/src/app/component/form/select/entity/sw-entity-multi-select/sw-entity-multi-select.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/entity/sw-entity-multi-select/sw-entity-multi-select.html.twig
@@ -11,6 +11,17 @@
     {% block sw_entity_multi_select_base %}
     {% block sw_entity_multi_select_base_selection %}
     <template #sw-select-selection="{ identification, error, disabled, size, expand, collapse}">
+        {% block sw_entity_multi_select_advanced_selection_modal %}
+        <component
+            :is="advancedSelectionComponent"
+            v-if="isAdvancedSelectionActive && isAdvancedSelectionModalVisible"
+            :initial-search-term="searchTerm"
+            :initial-selection="currentCollection"
+            @modal-close="closeAdvancedSelectionModal"
+            @selection-submit="onAdvancedSelectionSubmit"
+        />
+        {% endblock %}
+
         {% block sw_entity_multi_select_base_selection_slot %}
         <sw-select-selection-list
             ref="selectionList"
@@ -67,7 +78,20 @@
             {% block sw_entity_multi_select_base_results_list %}
             {% block sw_entity_multi_select_base_results_list_before %}
             <template #before-item-list>
+                {% block sw_entity_multi_select_base_results_list_before_advanced_selection %}
+                <!-- eslint-disable-next-line vuejs-accessibility/click-events-have-key-events -->
+                <div
+                    v-if="isAdvancedSelectionActive"
+                    class="sw-multi-select-filtering__advanced-selection sw-select-result"
+                    @click="openAdvancedSelectionModal"
+                >
+                    {{ $tc('global.sw-entity-advanced-selection-modal.link') }}
+                </div>
+                {% endblock %}
+
+                {% block sw_entity_multi_select_base_results_list_before_slot %}
                 <slot name="before-item-list"></slot>
+                {% endblock %}
             </template>
             {% endblock %}
 
