--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
@@ -8,6 +8,7 @@
             :disabled="disabled"
             :value="initialProduct"
             size="medium"
+            advanced-selection-component="sw-advanced-selection-product"
             show-clearable-button
         />
     </sw-arrow-field>
