--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item/sw-condition-line-item.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item/sw-condition-line-item.html.twig
@@ -15,6 +15,7 @@
         :entity-collection="products"
         :criteria="productCriteria"
         :context="productContext"
+        advanced-selection-component="sw-advanced-selection-product"
         @change="setIds"
     >
         <template #selection-label-property="{ item }">
