--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-items-in-cart/sw-condition-line-items-in-cart.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-items-in-cart/sw-condition-line-items-in-cart.html.twig
@@ -15,6 +15,7 @@
         :criteria="productCriteria"
         :context="productContext"
         :entity-collection="products"
+        advanced-selection-component="sw-advanced-selection-product"
         @change="setProductIds"
     >
         <template #selection-label-property="{ item }">
