NEXT-19800 - Product Detail Page and Variants Price Regulation Field

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-maintain-currencies-modal/sw-maintain-currencies-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-maintain-currencies-modal/sw-maintain-currencies-modal.html.twig
@@ -61,6 +61,7 @@
                 :disable-suffix="true"
                 :hide-list-prices="hideListPrices"
                 hide-purchase-prices
+                hide-regulation-prices
                 :disabled="disabled"
                 enable-inheritance
                 :currency="item"
