--- a/src/Administration/Resources/app/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.html.twig
@@ -262,6 +262,7 @@
                                 :disabled="!acl.can('product.editor')"
                                 :currency="currency"
                                 hide-purchase-prices
+                                hide-regulation-prices
                             />
                         </div>
                     </template>
