NEXT-16034 - added language switches to modules

--- a/src/Administration/Resources/app/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
@@ -52,6 +52,10 @@
     </template>
     {% endblock %}
 
+    <template #language-switch>
+        <sw-language-switch @on-change="onChangeLanguage" />
+    </template>
+
     <template #content>
         {% block sw_customer_list_content %}
         <div class="sw-customer-list__content">
