--- a/src/Administration/Resources/app/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -80,6 +80,15 @@
     </template>
     {% endblock %}
 
+    <template slot="language-switch">
+        <sw-language-switch
+            :save-changes-function="saveOnLanguageChange"
+            :abort-change-function="abortOnLanguageChange"
+            :disabled="!ruleId"
+            @on-change="onChangeLanguage"
+        />
+    </template>
+
     {% block sw_settings_rule_detail_content %}
     <template #content>
         <sw-card-view>
