--- a/src/Storefront/Resources/views/storefront/layout/header/search.html.twig
+++ b/src/Storefront/Resources/views/storefront/layout/header/search.html.twig
@@ -2,9 +2,13 @@
     <div class="collapse"
          id="searchCollapse">
         <div class="header-search">
+            {% set searchWidgetOptions = {
+                searchWidgetMinChars: page.header.activeLanguage.productSearchConfig.minSearchLength ?: 3
+            } %}
             <form action="{{ path('frontend.search.page') }}"
                   method="get"
                   data-search-form="true"
+                  data-search-widget-options='{{ searchWidgetOptions|json_encode }}'
                   data-url="{{ path('frontend.search.suggest') }}?search="
                   class="header-search-form">
                 {% block layout_header_search_input_group %}
