--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-toolbar-button/sw-text-editor-toolbar-button.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-toolbar-button/sw-text-editor-toolbar-button.scss
@@ -108,24 +108,35 @@ $sw-text-editor-toolbar-button-arrow-shadow: rgba(120, 138, 155, 0.5);
         }
     }
 
-    &.sw-text-editor-toolbar-button__link-menu {
-        padding: 15px;
+    .sw-text-editor-toolbar-button__link-menu {
+        width: 500px;
         cursor: initial;
         color: $color-darkgray-200;
-
-        .sw-text-editor-toolbar-button__link-menu-text {
-            padding-bottom: 5px;
-        }
+        
+        .sw-text-editor-toolbar-button__link-menu__content {
+            .sw-block-field  {
+                margin-bottom: 19px;
+            }
+            padding: 32px;
+        }   
 
         .sw-text-editor-toolbar-button__link-menu-buttons {
+            background-color: $color-gray-100;
             display: grid;
             grid-auto-flow: column;
-            justify-content: end;
-            gap: 8px;
-            margin-top: 10px;
+            justify-content: space-between;
+            padding: 15px;
         }
 
         .sw-text-editor-toolbar-button__link-menu-switch {
+            .sw-field--switch__input {
+                padding: 10px;
+            }
+
+            .sw-field__label label {
+                padding: 10px 15px;
+            }
+
             margin: 0;
         }
 
