--- a/src/Administration/Resources/app/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
@@ -201,7 +201,9 @@
                 {{ $tc('sw-customer.baseInfo.labelTurnover') }}
             </dt>
             {# price aggregations do not support currencies yet, see NEXT-5069 #}
-            <dd>{{ orderAmount | currency('EUR') }}</dd>
+            <dd class="sw-customer-base__label-turnover">
+                {{ orderAmount | currency('EUR') }}
+            </dd>
         </sw-description-list>
         {% endblock %}
 
