NEXT-19801 - Price indication guideline for advanced and currency related prices

--- a/src/Administration/Resources/app/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.html.twig
@@ -155,6 +155,10 @@
                         <label v-if="showListPrices[priceGroup.ruleId] !== false">
                             {{ $tc('sw-product.advancedPrices.advancedListPriceLabel') }}
                         </label>
+                        <!-- eslint-disable-next-line vuejs-accessibility/label-has-for -->
+                        <label v-if="showListPrices[priceGroup.ruleId] !== false">
+                            {{ $tc('sw-product.advancedPrices.labelRegulationPrice') }}
+                        </label>
                     </div>
                 </template>
                 {% endblock %}
@@ -262,7 +266,6 @@
                                 :disabled="!acl.can('product.editor')"
                                 :currency="currency"
                                 hide-purchase-prices
-                                hide-regulation-prices
                             />
                         </div>
                     </template>
