NEXT-19099 - Add active column in customer overview

--- a/src/Administration/Resources/app/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
@@ -168,6 +168,33 @@
                 </template>
                 {% endblock %}
 
+                {% block sw_customer_list_grid_columns_active %}
+                <template #column-active="{ item, isInlineEdit }">
+                    {% block sw_customer_list_grid_columns_active_inline_edit %}
+                    <template v-if="isInlineEdit">
+                        <sw-checkbox-field v-model="item.active" />
+                    </template>
+                    {% endblock %}
+
+                    {% block sw_customer_list_grid_columns_active_content %}
+                    <template v-else>
+                        <sw-icon
+                            v-if="item.active"
+                            name="small-default-checkmark-line-medium"
+                            small
+                            class="is--active"
+                        />
+                        <sw-icon
+                            v-else
+                            name="small-default-x-line-medium"
+                            small
+                            class="is--inactive"
+                        />
+                    </template>
+                    {% endblock %}
+                </template>
+                {% endblock %}
+
                 {% block sw_customer_list_grid_columns_actions %}
                 <template #actions="{ item }">
                     {% block sw_customer_list_grid_columns_actions_view %}
