--- a/src/Administration/Resources/app/administration/src/module/sw-settings-rule/view/sw-settings-rule-detail-assignments/sw-settings-rule-detail-assignments.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-rule/view/sw-settings-rule-detail-assignments/sw-settings-rule-detail-assignments.html.twig
@@ -140,15 +140,8 @@
     </sw-card>
     {% endblock %}
 
-    {% block sw_settings_rule_detail_assignments_loader %}
-    <sw-card
-        v-if="isLoading"
-        class="sw-settings-rule-detail-assignments__card-loader"
-        position-identifier="sw-settings-rule-detail-assignments-loader"
-    >
-        <sw-loader />
-    </sw-card>
-    {% endblock %}
+    {# @deprecated tag:v6.5.0 - Will be removed #}
+    {% block sw_settings_rule_detail_assignments_loader %}{% endblock %}
 
     {% block sw_settings_rule_detail_assignments_delete_modal %}
     <sw-modal
